2010-01-13  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/42705
	* tree-ssa-reassoc.c (build_and_add_sum): Insert stmts after
	labels.

	* gcc.c-torture/compile/pr42705.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155861 138bc75d-0d04-0410-961f-82ee72b054a4